feat(수정) 제일 하단 마무리멘트 수정

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
         내일의 성공을 보장하며, 안민규의 리더십은 우리 모두에게 새로운 희망과
         번영의 길을 열어줄 것입니다. 안민규의 도전을 응원해주세요
       </p>
-      <p>그리고 가능하면 많은 민원을 넣어주세요!</p>
+      <p>수많은 민원은 민규를 행복하게 해줍니다!</p>
     </section>
   </body>
 </html>
